# amsla

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.py
.circleci/: build.py  config.yml
config/: Jenkinsfile  indentAllFiles.m  run_tests.sh
examples/matlab/: lowerTriangularMatrix.m
source/cpp/: CMakeLists.txt
source/cpp/amsla/common/: Assertions.hpp  CMakeLists.txt  CooDataStructure.hpp  CoreTypes.hpp  DataStructure.hpp  OpenClWrapper.hpp  test_CooDataStructure.cpp
source/cpp/common/: CMakeLists.txt
source/cpp/common/include/: Assertions.hpp  CoreTypes.hpp  DataStructure.hpp  DeviceManagement.hpp
source/cpp/common/include/details/: DataStructure.hpp  DeviceManagement.hpp  datastructure_kernels.cl
source/cpp/common/include/private/: DeviceManagement.hpp
source/cpp/common/source/: Assertions.cpp  CMakeLists.txt  DataStructure.cpp  DeviceManagement.cpp  device_functions.cl
source/cpp/datastructures/: CMakeLists.txt
source/cpp/datastructures/coo/: CMakeLists.txt
source/cpp/datastructures/coo/include/: CooDataStructure.hpp
source/cpp/datastructures/coo/include/details/: CooDataStructure.hpp  coo_definitions.cl
source/cpp/datastructures/coo/include/private/: CooDataStructure.hpp  coo_allNodes.cl  coo_definition.cl  coo_definitions.cl  coo_kernels.cl
source/cpp/datastructures/coo/include/private/derived/: coo_allNodes.cl  coo_definition.cl
source/cpp/datastructures/coo/source/: coo_definition.cl
source/cpp/datastructures/include/: CooDataStructure.hpp
source/cpp/datastructures/source/: CooDataStructure.cpp
source/matlab/+a2msla/+common/: EnhancedGraph.m
source/matlab/+a2msla/+levelSet/: Analysis.m
source/matlab/+a2msla/+levelSet/+internal/: GraphWrapper.m
source/matlab/+a2msla/+tassl/: Analysis.m  ComponentSubGraphMap.m  GraphWrapper.m
source/matlab/+a2msla/+tassl/+internal/: GraphWrapper.m
source/matlab/+amsla/: SparseMatrix.m
source/matlab/+amsla/+common/: BreadthFirstSearch.m  DataStructure.m  DataStructureDecorator.m  DataStructureInterface.m  EnhancedGraph.m  GraphWrapper.m  PartitionerInterface.m  PartitioningResult.m  Scheduler.m  TriangularSolver.m  allNodesAreAssigned.m  findSubGraphLevels.m  isNullId.m  nullId.m  numberOfParents.m  numericArray.m  rootNodes.m  rowVector.m
source/matlab/+amsla/+common/+internal/: GraphPlotter.m  PartitionerGraphWrapperInterface.m  SchedulerGraphWrapper.m  SubGraphScheduler.m  TimeSlotDecorator.m  applyNaryFunction.m  applyUnaryFunction.m  externalTimeSlot.m  findSubGraphLevels.m  isExternalTimeSlot.m
source/matlab/+amsla/+levelSet/: Analyser.m  Analysis.m  Partitioner.m  PartitioningResult.m
source/matlab/+amsla/+levelSet/+internal/: DataStructureDecorator.m  GraphWrapper.m  PartitionerGraphWrapper.m
source/matlab/+amsla/+tassl/: Analyser.m  Analysis.m  Partitioner.m  PartitioningResult.m  Scheduler.m
source/matlab/+amsla/+tassl/+internal/: BreadthFirstSearch.m  ComponentDecorator.m  ComponentPartitioner.m  ComponentSubGraphMap.m  DataStructureDecorator.m  GraphWrapper.m  PartitionerGraphWrapper.m  SchedulerGraphWrapper.m  SelectChildrenIfReady.m  SubGraphPartitioner.m  SubGraphPartitionerImplInterface.m  SubGraphPartitionerLargeComponent.m  SubGraphPartitionerSmallComponent.m  TasslSubGraphPartitioner.m  TasslSubGraphPartitionerImplInterface.m  TasslSubGraphPartitionerLargeComponent.m  TasslSubGraphPartitionerSmallComponent.m
test/cpp/: CMakeLists.txt
test/cpp/common/: CMakeLists.txt  bad_kernel.cl  simple_kernels.cl  test_Assertions.cpp  test_DeviceManagement.cpp
test/cpp/datastructures/: CMakeLists.txt  test_CooDataStructure.cpp
test/matlab/: a2mslaTests.m  hA2mslaTest.m
test/matlab/common/: tEnhancedGraph.m
test/matlab/concrete/common/: tEnhancedGraph.m
test/matlab/concrete/levelSet/: tAnalyser.m  tAnalysis.m
test/matlab/concrete/levelSet/internal/: tGraphWrapper.m
test/matlab/concrete/tassl/: tAnalyser.m  tAnalysis.m
test/matlab/concrete/tassl/internal/: tComponentSubGraphMap.m  tGraphWrapper.m
test/matlab/levelSet/: tAnalysis.m
test/matlab/levelSet/internal/: tGraphWrapper.m
test/matlab/private/: extractSourceDir.m  extractTestDir.m
test/matlab/shared/: a2mslaTests.m  amslaTests.m  runAllAmslaPerformanceTests.m  runAllAmslaTests.m
test/matlab/shared/+a2msla/+test/+shared/: AnalysisTests.m
test/matlab/shared/+a2msla/+test/+tools/: A2mslaTest.m  extractSourceDir.m  extractTestDir.m
test/matlab/shared/+amsla/+test/+shared/: AnalyserTests.m  AnalysisTests.m  PartitionerTests.m
test/matlab/shared/+amsla/+test/+tools/: AmslaPerformanceTest.m  AmslaTest.m  analyseMatrix.m  computeTolerance.m  dataStructureState.m  extractSourceDir.m  getSimpleLowerTriangularMatrix.m  levelSetAnalysis.m  tasslAnalysis.m
test/matlab/shared/+amsla/+test/+tools/+internal/: AmslaTest.m  extractSourceDir.m  testRunnerSetup.m
test/matlab/suite/performance/: test_SparseMatrix.m
test/matlab/suite/unit/common/: tDataStructure.m  tScheduler.m  test_DataStructure.m  test_Scheduler.m  test_TriangularSolver.m  test_findSubGraphLevels.m
test/matlab/suite/unit/common/internal/: tSchedulerGraphWrapper.m  test_SchedulerGraphWrapper.m  test_findSubGraphLevels.m
test/matlab/suite/unit/levelSet/: tPartitioner.m  test_Partitioner.m
test/matlab/suite/unit/levelSet/internal/: tPartitionerGraphWrapper.m  test_PartitionerGraphWrapper.m
test/matlab/suite/unit/tassl/: tPartitioner.m  test_Partitioner.m
test/matlab/suite/unit/tassl/internal/: tComponentSubGraphMap.m  tPartitionerGraphWrapper.m  test_ComponentSubGraphMap.m  test_PartitionerGraphWrapper.m
test/matlab/suite/workflow/: tExamples.m  test_Examples.m
test/matlab/tassl/: tAnalysis.m  tComponentSubGraphMap.m  tGraphWrapper.m
test/matlab/tassl/internal/: tComponentSubGraphMap.m  tGraphWrapper.m
